# shinden-client

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  bootstrap-exe.bat  build-exe.bat  dev-app-update.yml  electron-builder.yml  generator_exe.bat  package-lock.json  package.json
.github/workflows/: main.yml
scripts/: build_exe.py
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: AccountButton.svelte  Console.svelte  Empty.svelte  LoadingButton.svelte  Navbar.svelte  PlayerListElement.svelte  Players.svelte  global.svelte.ts  playerSafety.svelte.ts  types.ts  updater.svelte.ts  watchlistRefresh.ts
src/lib/badges/: BuiltIn.svelte  Secure.svelte  Unknown.svelte  Unsecure.svelte
src/lib/logs/: Error.svelte  Info.svelte  Success.svelte  UpdateButton.svelte  Warning.svelte  logs.svelte.ts
src/renderer/src/: App.vue
src/renderer/src/assets/: main.css
src/renderer/src/components/: NavBar.vue
src/routes/: +layout.svelte  +page.svelte
src/routes/account/: +page.svelte
src/routes/episodes/: +page.svelte
src/routes/info/: +page.svelte
src/routes/players/: +page.svelte
src/routes/search/: +page.svelte
src/routes/search/[name]/: +page.svelte
src/routes/watching/: +page.svelte
src/routes/watching/[id]/: +page.svelte
src/routes/watchlist/: +page.svelte
tests/: test_build_exe.py
