[package]
name = "ShindenClient"
version = "4.0.0"
description = "A Tauri App"
authors = ["Błażej Drozd"]
edition = "2021"
license = "MIT"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "shinden_client_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
shinden-pl-api = "0.1.5"
cda-dl = "0.1.0"
reqwest = "0.12.22"
tauri-plugin-http = "2"
warp = "0.3.7"
